[package]
name = "crabtalk-command-codegen"
description = "Proc-macro codegen for crabtalk service commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/crabtalk-command-codegen"

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
