[package]
name = "crabtalk-command"
description = "High-level service command layer for Crabtalk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
mcp = ["dep:axum"]
client = ["dep:transport"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crabtalk-command-codegen.workspace = true
dirs.workspace = true
futures-util.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wcore.workspace = true
# optional (mcp)
axum = { workspace = true, optional = true }
# optional (client)
transport = { workspace = true, optional = true }
