[package]
name = "crabtalk-command"
description = "High-level service command layer for Crabtalk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/crabtalk-command"

[features]
default = []
mcp = ["dep:axum", "dep:schemars", "dep:serde_json"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crabtalk-command-codegen.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wcore.workspace = true
# optional (mcp)
axum = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
