[package]
name = "walrus-core"
description = "Core types and traits for the Walrus agent runtime"
documentation = "https://docs.rs/walrus-core"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# crates.io
anyhow.workspace = true
dirs.workspace = true
heck.workspace = true
async-stream.workspace = true
compact_str.workspace = true
futures-core.workspace = true
futures-util.workspace = true
prost.workspace = true
schemars.workspace = true
serde.workspace = true
smallvec.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build.workspace = true
