[package]
name = "crabtalk-core"
description = "Core types and traits for the Crabtalk agent runtime"
documentation = "https://docs.rs/crabtalk-core"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# crabllm
crabllm-core.workspace = true
# crates.io
anyhow.workspace = true
dirs.workspace = true
heck.workspace = true
async-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
prost.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build.workspace = true
