[package]
name = "crabtalk-core"
description = "Core types and traits for the Crabtalk agent runtime"
documentation = "https://docs.rs/crabtalk-core"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
testing = []

[dependencies]
# crabllm
crabllm-core.workspace = true
# crates.io
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
heck.workspace = true
async-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
prost.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
crabtalk-core = { path = ".", features = ["testing"] }
serde_json.workspace = true
tempfile.workspace = true

[build-dependencies]
prost-build.workspace = true
