[package]
name = "crabtalk"
description = "Crabtalk library"
documentation = "https://docs.rs/crabtalk-node"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
plugin.workspace = true
command.workspace = true
crabllm-core.workspace = true
crabllm-provider = { workspace = true, features = ["hyper"] }
mcp = { workspace = true, default-features = false, features = ["hyper"] }
memory.workspace = true
runtime.workspace = true
transport.workspace = true
wcore.workspace = true

# crates.io
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
cron.workspace = true
async-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
rand.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
ulid.workspace = true

[features]
default = ["native-tls"]
native-tls = ["crabllm-provider/native-tls", "mcp/native-tls"]
rustls = ["crabllm-provider/rustls", "mcp/rustls"]

[dev-dependencies]
tempfile.workspace = true
wcore = { workspace = true, features = ["testing"] }
