[package]
name = "walrus-daemon"
description = "Walrus agent runtime with memory, tools, and local inference"
documentation = "https://docs.rs/walrus-daemon"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
model.workspace = true
transport.workspace = true
wcore.workspace = true

# crates.io
anyhow.workspace = true
async-stream.workspace = true
chrono.workspace = true
compact_str.workspace = true
futures.workspace = true
futures-core.workspace = true
futures-util.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
