[package]
name = "crabtalk-daemon"
description = "Crabtalk agent runtime with memory, tools, and local inference"
documentation = "https://docs.rs/crabtalk-daemon"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
crabhub.workspace = true
crabtalk-command.workspace = true
model.workspace = true
runtime.workspace = true
transport.workspace = true
wcore.workspace = true

# crates.io
anyhow.workspace = true
chrono.workspace = true
cron.workspace = true
async-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
