[package]
name = "crabtalk-gateway"
description = "Shared gateway types for Crabtalk platform adapters"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
transport.workspace = true
tokio.workspace = true
tracing.workspace = true
wcore.workspace = true
