[package]
name = "crabtalk-gateway"
description = "Gateway library and binary for Crabtalk platform adapters"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "crabtalk-gateway"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = []
telegram = ["dep:teloxide"]
cli = ["dep:clap", "dep:tracing-subscriber", "telegram"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
teloxide = { workspace = true, optional = true }
tokio.workspace = true
toml.workspace = true
transport.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
wcore.workspace = true
